# aw-watcher-enhanced

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
aw_watcher_enhanced/: __init__.py  __main__.py  categorizer.py  config.py  document.py  llm_ocr.py  main.py  ocr.py  privacy.py  rag_client.py  smart_capture.py  window.py
aw_watcher_enhanced/rules/: categories.yaml  clients_example.yaml
browser-extension/: README.md  manifest.firefox.json  manifest.json
browser-extension/src/: background.js  options.html  options.js  popup.html  popup.js
docs/: INSTALL-macos.md  INSTALL-windows.md
installer/: README.md  install.bat  startup_script.pyw  uninstall.bat  windows_service.py
installer/macos/: README.md  install.sh  uninstall.sh
tests/: __init__.py  test_categorizer.py  test_config.py  test_document.py  test_ocr.py  test_privacy.py
